--- a/platformio.ini
+++ b/platformio.ini
@@ -56,7 +56,7 @@ board             = megaatmega2560
 build_flags       = ${common.build_flags}
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed     = 250000
 
@@ -70,7 +70,7 @@ board             = megaatmega1280
 build_flags       = ${common.build_flags}
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed     = 250000
 
@@ -87,7 +87,7 @@ framework     = arduino
 board         = at90usb1286
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed = 250000
 
@@ -103,7 +103,7 @@ framework     = arduino
 board         = at90usb1286
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed = 250000
 
@@ -177,7 +177,7 @@ framework     = arduino
 board         = sanguino_atmega644p
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed = 250000
 
@@ -190,7 +190,7 @@ framework     = arduino
 board         = sanguino_atmega1284p
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed = 250000
 
@@ -232,7 +232,7 @@ board             = reprap_rambo
 build_flags       = ${common.build_flags}
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed     = 250000
 
@@ -613,7 +613,7 @@ framework     = arduino
 board         = teensy31
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 lib_ignore    = Adafruit NeoPixel
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_TEENSY31_32>
 monitor_speed = 250000
@@ -654,7 +654,7 @@ framework     = arduino
 board         = teensy35
 build_flags   = ${common.build_flags}
 lib_deps      = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 lib_ignore    = Adafruit NeoPixel
 src_filter    = ${common.default_src_filter} +<src/HAL/HAL_TEENSY35_36>
 monitor_speed = 250000
@@ -685,7 +685,7 @@ board             = fysetc_f6_13
 build_flags       = ${common.build_flags}
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter        = ${common.default_src_filter} +<src/HAL/HAL_AVR>
 monitor_speed     = 250000
 
@@ -726,5 +726,5 @@ framework   = arduino
 board       = megaatmega2560
 build_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 lib_deps    = ${common.lib_deps}
-  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter  = +<src/Marlin.cpp>
