UBL Settings Update

--- a/platformio.ini
+++ b/platformio.ini
@@ -455,7 +455,7 @@ board = megaatmega2560
 board_build.f_cpu = 16000000L
 lib_deps = ${common.lib_deps}
 extra_scripts = pre:buildroot/share/PlatformIO/scripts/common-cxxflags.py
-build_flags = ${common.build_flags} -DMachineCR10SV2 -DBedDC  -DPOWER_LOSS_RECOVERY -DABL_BLTOUCH -DABL_UBL
+build_flags = ${common.build_flags} -DMachineCR10SV2 -DBedDC  -DPOWER_LOSS_RECOVERY -DABL_BLTOUCH -DABL_UBL -DMeshExtreme
 src_filter = ${common.default_src_filter} +<src/HAL/AVR>
 
 [env:CR2020]
